--- a/internal/config/example/database.yml
+++ b/internal/config/example/database.yml
@@ -1,14 +1,14 @@
 database:
   mysql:
     sdb:
-      host: 127.0.0.1
+      host: host.docker.internal
       port: 3306
       username: root
       password: 
       dbname: sdb
       adapter: mysql
     miniproject:
-      host: 127.0.0.1
+      host: host.docker.internal
       port: 3306
       username: root
       password: 
@@ -16,6 +16,6 @@ database:
       adapter: mysql
   redis:
     db:
-      host: 127.0.0.1
+      host: host.docker.internal
       port: 6379
       password:
